kubernetes/apps/prowlarr/prowlarr-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: prowlarr-ingress
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: homelab-local-ca
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - prowlarr.local
        - prowlarr.lan
      secretName: prowlarr-local-tls
  rules:
    - host: prowlarr.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
    - host: prowlarr.lan
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: prowlarr
                port:
                  number: 9696
